@@ -1,0 +1,9 @@
+from pystacia.lazyenum import enum
+
+
+types = enum('type')
+filters = enum('filter')
+colorspaces = enum('colorspace')
+compressions = enum('compression')
+composites = enum('composite')
+axes = enum('axis')
