@@ -5,16 +5,17 @@
 # This module is part of Pystacia and is released under
 # the MIT License: http://www.opensource.org/licenses/mit-license.php
 
-import pystacia
+from pystacia import image
 from pystacia.image import types
+from pystacia.image.sample import lena_available
 
 
-if hasattr(pystacia, 'lena'):
-    sample = pystacia.lena
+if lena_available():
+    sample = image.lena
     sample.size = (512, 512)
     sample.type = types.truecolor
 else:
-    sample = pystacia.magick_logo
+    sample = image.magick_logo
     sample.size = (640, 480)
     sample.type = types.palette
 
@@ -31,25 +32,43 @@ if not hasattr(TestCase, 'assertSequenceEqual'):
 
 class MagickLogo(TestCase):
     def test(self):
-        img = pystacia.magick_logo()
+        img = image.magick_logo()
         
         self.assertEquals(img.size, (640, 480))
         self.assertEquals(img.type, types.palette)
 
 
 class Lena(TestCase):
-    @skipIf(not hasattr(pystacia, 'lena'), 'Lena not available')
+    @skipIf(not lena_available(), 'Lena not available')
     def test(self):
-        img = pystacia.lena()
+        img = image.lena()
         self.assertEquals(img.size, (512, 512))
         self.assertEquals(img.type, types.truecolor)
         self.assertEquals(img.colorspace, colorspaces.rgb)
         img.close()
         
-        img = pystacia.lena(32)
+        img = image.lena(32)
         self.assertEquals(img.size, (32, 32))
         self.assertEquals(img.colorspace, colorspaces.rgb)
         img.close()
 
 
+class DeprecationTest(TestCase):
+    def test(self):
+        import pystacia
+        from pystacia import image
+        
+        with catch_warnings(record=True) as w:
+            simplefilter('always')
+            
+        with catch_warnings(record=True) as w:
+            simplefilter('always')
+            names = ['composites', 'types', 'filters', 'colorspaces',
+                     'compressions', 'axes']
+            for name in names:
+                self.assertEquals(getattr(pystacia, name).x,
+                                  getattr(image, name).x)
+
+
 from pystacia.image import colorspaces
+from warnings import catch_warnings, simplefilter
